// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Credential helpers claims credentials 1`] = `
Object {
  "@context": Array [
    "https://www.w3.org/2018/credentials/v1",
  ],
  "holder": Object {
    "id": Any<String>,
  },
  "id": Any<String>,
  "proof": Object {
    "challenge": Any<String>,
    "created": Any<String>,
    "domain": Any<String>,
    "jws": Any<String>,
    "proofPurpose": "authentication",
    "type": "EcdsaSecp256k1Signature2019",
    "verificationMethod": Any<String>,
  },
  "type": Array [
    "VerifiablePresentation",
    "CredentialClaim",
  ],
  "verifiableCredential": Array [
    Object {
      "@context": Array [
        "https://www.w3.org/2018/credentials/v1",
        Object {
          "@version": 1.1,
          "data": Object {
            "@context": Object {
              "@version": 1.1,
              "scmdata": "https://example.org/entity/idnetity/data#",
            },
            "@id": "scmdata:id",
            "@type": "scmdata:type",
          },
          "did": Object {
            "@id": "scm:did",
            "@type": "@json",
          },
          "identity": Object {
            "@id": "scm:identity",
            "@type": "@json",
          },
          "scm": "https://example.org/entity/idnetity#",
        },
      ],
      "credentialSubject": Object {
        "data": Object {
          "@type": "EntityIdentity",
          "identity": Object {
            "@context": Array [
              "https://www.w3.org/2018/credentials/v1",
              Object {
                "@version": 1.1,
                "data": Object {
                  "@context": Object {
                    "@version": 1.1,
                    "scmdata": "https://example.org/identity/data#",
                  },
                  "@id": "scmdata:id",
                  "@type": "scmdata:type",
                },
                "firstname": Object {
                  "@id": "scm:firstname",
                  "@type": "xsd:string",
                },
                "lastname": Object {
                  "@id": "scm:lastname",
                  "@type": "xsd:string",
                },
                "scm": "https://example.org/identity#",
                "xsd": "http://www.w3.org/2001/XMLSchema#",
              },
            ],
            "credentialSubject": Object {
              "data": Object {
                "@type": "TestUtilIdentity",
                "firstname": "alice",
                "lastname": "Lastname",
              },
            },
            "holder": Object {
              "id": Any<String>,
            },
            "id": Any<String>,
            "issuanceDate": Any<String>,
            "issuer": Any<String>,
            "proof": Object {
              "created": Any<String>,
              "jws": Any<String>,
              "proofPurpose": "assertionMethod",
              "type": "EcdsaSecp256k1Signature2019",
              "verificationMethod": Any<String>,
            },
            "type": Array [
              "VerifiableCredential",
              "TestUtilIdentity",
            ],
          },
        },
        "did": Object {
          "@context": Array [
            "https://w3id.org/did/v1",
            "https://w3id.org/security/v2",
          ],
          "assertionMethod": Array [
            Any<String>,
          ],
          "authentication": Array [
            Any<String>,
          ],
          "capabilityDelegation": Array [
            Any<String>,
          ],
          "capabilityInvocation": Array [
            Any<String>,
          ],
          "id": Any<String>,
          "keyAgreement": Array [
            Any<String>,
          ],
          "proof": Object {
            "created": Any<String>,
            "jws": Any<String>,
            "proofPurpose": "verificationMethod",
            "type": "EcdsaSecp256k1Signature2019",
            "verificationMethod": Any<String>,
          },
          "publicKey": Array [
            Object {
              "id": Any<String>,
              "publicKeyBase58": Any<String>,
              "type": "EcdsaSecp256k1VerificationKey2019",
            },
          ],
          "verificationMethod": Array [
            Object {
              "controller": Any<String>,
              "id": Any<String>,
              "nonce": Any<String>,
              "type": "EcdsaSecp256k1VerificationKey2019",
            },
          ],
        },
      },
      "holder": Object {
        "id": Any<String>,
      },
      "id": Any<String>,
      "issuanceDate": Any<String>,
      "issuer": Any<String>,
      "proof": Object {
        "created": Any<String>,
        "jws": Any<String>,
        "proofPurpose": "assertionMethod",
        "type": "EcdsaSecp256k1Signature2019",
        "verificationMethod": Any<String>,
      },
      "type": Array [
        "VerifiableCredential",
        "EntityIdentity",
      ],
    },
    Object {
      "@context": Array [
        "https://www.w3.org/2018/credentials/v1",
        Object {
          "@version": 1.1,
          "credential": Object {
            "@id": "scm:credential",
            "@type": "@json",
          },
          "data": Object {
            "@context": Object {
              "@version": 1.1,
              "scmdata": "https://example.org/credential/claim/data#",
            },
            "@id": "scmdata:id",
            "@type": "scmdata:type",
          },
          "did": Object {
            "@id": "scm:did",
            "@type": "@json",
          },
          "scm": "https://example.org/credential/claim#",
        },
      ],
      "credentialSubject": Object {
        "data": Object {
          "@type": "Claim:TestDocument",
          "credential": Object {
            "@context": Array [
              "https://www.w3.org/2018/credentials/v1",
              Object {
                "@version": 1.1,
                "data": Object {
                  "@id": "scm:data",
                  "@type": "@json",
                },
                "scm": "https://example.org/testdocument#",
              },
            ],
            "credentialSubject": Object {
              "data": Object {
                "@type": "TestDocument",
                "comment": "nice doc for alice",
                "key": "testdoc1",
              },
            },
            "holder": Object {
              "id": Any<String>,
            },
            "id": Any<String>,
            "issuanceDate": Any<String>,
            "type": Array [
              "VerifiableCredential",
              "TestDocument",
            ],
          },
        },
        "did": Object {
          "@context": Array [
            "https://w3id.org/did/v1",
            "https://w3id.org/security/v2",
          ],
          "assertionMethod": Array [
            Any<String>,
          ],
          "authentication": Array [
            Any<String>,
          ],
          "id": Any<String>,
          "publicKey": Array [
            Object {
              "id": Any<String>,
              "publicKeyBase58": Any<String>,
              "type": "EcdsaSecp256k1VerificationKey2019",
            },
          ],
          "verificationMethod": Array [
            Object {
              "@context": Array [
                "https://w3id.org/did/v1",
                Object {
                  "@version": 1.1,
                  "did": "https://w3id.org/security/v2",
                  "nonce": Object {
                    "@id": "did:nonce",
                    "@type": "xsd:string",
                  },
                  "originalPurposes": Object {
                    "@id": "did:originalPurposes",
                    "@type": "@json",
                  },
                  "proof": Object {
                    "@id": "did:proof",
                  },
                  "publicKeyBase58": Object {
                    "@id": "did:publicKeyBase58",
                    "@type": "xsd:string",
                  },
                  "xsd": "https://www.w3.org/2009/XMLSchema/XMLSchema.xsd#",
                },
              ],
              "controller": Any<String>,
              "id": Any<String>,
              "nonce": Any<String>,
              "originalPurposes": Array [
                "verificationMethod",
                "assertionMethod",
                "authentication",
              ],
              "proof": Object {
                "created": Any<String>,
                "jws": Any<String>,
                "type": "EcdsaSecp256k1Signature2019",
                "verificationMethod": Any<String>,
              },
              "type": "EcdsaSecp256k1VerificationKey2019",
            },
          ],
        },
      },
      "holder": Object {
        "id": Any<String>,
      },
      "id": Any<String>,
      "issuanceDate": Any<String>,
      "issuer": Any<String>,
      "proof": Object {
        "created": Any<String>,
        "jws": Any<String>,
        "proofPurpose": "assertionMethod",
        "type": "EcdsaSecp256k1Signature2019",
        "verificationMethod": Any<String>,
      },
      "type": Array [
        "VerifiableCredential",
        "CredentialClaim",
      ],
    },
    Object {
      "@context": Array [
        "https://www.w3.org/2018/credentials/v1",
        Object {
          "@version": 1.1,
          "credential": Object {
            "@id": "scm:credential",
            "@type": "@json",
          },
          "data": Object {
            "@context": Object {
              "@version": 1.1,
              "scmdata": "https://example.org/credential/claim/data#",
            },
            "@id": "scmdata:id",
            "@type": "scmdata:type",
          },
          "did": Object {
            "@id": "scm:did",
            "@type": "@json",
          },
          "scm": "https://example.org/credential/claim#",
        },
      ],
      "credentialSubject": Object {
        "data": Object {
          "@type": "Claim:TestDocument",
          "credential": Object {
            "@context": Array [
              "https://www.w3.org/2018/credentials/v1",
              Object {
                "@version": 1.1,
                "data": Object {
                  "@id": "scm:data",
                  "@type": "@json",
                },
                "scm": "https://example.org/testdocument#",
              },
            ],
            "credentialSubject": Object {
              "data": Object {
                "@type": "TestDocument",
                "description": "not very nice doc for alice",
                "id": "testdoc2",
              },
            },
            "holder": Object {
              "id": Any<String>,
            },
            "id": Any<String>,
            "issuanceDate": Any<String>,
            "type": Array [
              "VerifiableCredential",
              "TestDocument",
            ],
          },
        },
        "did": Object {
          "@context": Array [
            "https://w3id.org/did/v1",
            "https://w3id.org/security/v2",
          ],
          "assertionMethod": Array [
            Any<String>,
          ],
          "authentication": Array [
            Any<String>,
          ],
          "id": Any<String>,
          "publicKey": Array [
            Object {
              "id": Any<String>,
              "publicKeyBase58": Any<String>,
              "type": "EcdsaSecp256k1VerificationKey2019",
            },
          ],
          "verificationMethod": Array [
            Object {
              "@context": Array [
                "https://w3id.org/did/v1",
                Object {
                  "@version": 1.1,
                  "did": "https://w3id.org/security/v2",
                  "nonce": Object {
                    "@id": "did:nonce",
                    "@type": "xsd:string",
                  },
                  "originalPurposes": Object {
                    "@id": "did:originalPurposes",
                    "@type": "@json",
                  },
                  "proof": Object {
                    "@id": "did:proof",
                  },
                  "publicKeyBase58": Object {
                    "@id": "did:publicKeyBase58",
                    "@type": "xsd:string",
                  },
                  "xsd": "https://www.w3.org/2009/XMLSchema/XMLSchema.xsd#",
                },
              ],
              "controller": Any<String>,
              "id": Any<String>,
              "nonce": Any<String>,
              "originalPurposes": Array [
                "verificationMethod",
                "assertionMethod",
                "authentication",
              ],
              "proof": Object {
                "created": Any<String>,
                "jws": Any<String>,
                "type": "EcdsaSecp256k1Signature2019",
                "verificationMethod": Any<String>,
              },
              "type": "EcdsaSecp256k1VerificationKey2019",
            },
          ],
        },
      },
      "holder": Object {
        "id": Any<String>,
      },
      "id": Any<String>,
      "issuanceDate": Any<String>,
      "issuer": Any<String>,
      "proof": Object {
        "created": Any<String>,
        "jws": Any<String>,
        "proofPurpose": "assertionMethod",
        "type": "EcdsaSecp256k1Signature2019",
        "verificationMethod": Any<String>,
      },
      "type": Array [
        "VerifiableCredential",
        "CredentialClaim",
      ],
    },
  ],
}
`;

exports[`Credential helpers offers credentials 1`] = `
Object {
  "@context": Array [
    "https://www.w3.org/2018/credentials/v1",
  ],
  "holder": Object {
    "id": Any<String>,
  },
  "id": Any<String>,
  "proof": Object {
    "challenge": Any<String>,
    "created": Any<String>,
    "domain": Any<String>,
    "jws": Any<String>,
    "proofPurpose": "authentication",
    "type": "EcdsaSecp256k1Signature2019",
    "verificationMethod": Any<String>,
  },
  "type": Array [
    "VerifiablePresentation",
    "CredentialOffer",
  ],
  "verifiableCredential": Array [
    Object {
      "@context": Array [
        "https://www.w3.org/2018/credentials/v1",
        Object {
          "@version": 1.1,
          "data": Object {
            "@context": Object {
              "@version": 1.1,
              "scmdata": "https://example.org/entity/idnetity/data#",
            },
            "@id": "scmdata:id",
            "@type": "scmdata:type",
          },
          "did": Object {
            "@id": "scm:did",
            "@type": "@json",
          },
          "identity": Object {
            "@id": "scm:identity",
            "@type": "@json",
          },
          "scm": "https://example.org/entity/idnetity#",
        },
      ],
      "credentialSubject": Object {
        "data": Object {
          "@type": "EntityIdentity",
          "identity": Object {
            "@context": Array [
              "https://www.w3.org/2018/credentials/v1",
              Object {
                "@version": 1.1,
                "data": Object {
                  "@context": Object {
                    "@version": 1.1,
                    "scmdata": "https://example.org/identity/data#",
                  },
                  "@id": "scmdata:id",
                  "@type": "scmdata:type",
                },
                "firstname": Object {
                  "@id": "scm:firstname",
                  "@type": "xsd:string",
                },
                "lastname": Object {
                  "@id": "scm:lastname",
                  "@type": "xsd:string",
                },
                "scm": "https://example.org/identity#",
                "xsd": "http://www.w3.org/2001/XMLSchema#",
              },
            ],
            "credentialSubject": Object {
              "data": Object {
                "@type": "TestUtilIdentity",
                "firstname": "bob",
                "lastname": "Lastname",
              },
            },
            "holder": Object {
              "id": Any<String>,
            },
            "id": Any<String>,
            "issuanceDate": Any<String>,
            "issuer": Any<String>,
            "proof": Object {
              "created": Any<String>,
              "jws": Any<String>,
              "proofPurpose": "assertionMethod",
              "type": "EcdsaSecp256k1Signature2019",
              "verificationMethod": Any<String>,
            },
            "type": Array [
              "VerifiableCredential",
              "TestUtilIdentity",
            ],
          },
        },
        "did": Object {
          "@context": Array [
            "https://w3id.org/did/v1",
            "https://w3id.org/security/v2",
          ],
          "assertionMethod": Array [
            Any<String>,
          ],
          "authentication": Array [
            Any<String>,
          ],
          "capabilityDelegation": Array [
            Any<String>,
          ],
          "capabilityInvocation": Array [
            Any<String>,
          ],
          "id": Any<String>,
          "keyAgreement": Array [
            Any<String>,
          ],
          "proof": Object {
            "created": Any<String>,
            "jws": Any<String>,
            "proofPurpose": "verificationMethod",
            "type": "EcdsaSecp256k1Signature2019",
            "verificationMethod": Any<String>,
          },
          "publicKey": Array [
            Object {
              "id": Any<String>,
              "publicKeyBase58": Any<String>,
              "type": "EcdsaSecp256k1VerificationKey2019",
            },
          ],
          "verificationMethod": Array [
            Object {
              "controller": Any<String>,
              "id": Any<String>,
              "nonce": Any<String>,
              "type": "EcdsaSecp256k1VerificationKey2019",
            },
          ],
        },
      },
      "holder": Object {
        "id": Any<String>,
      },
      "id": Any<String>,
      "issuanceDate": Any<String>,
      "issuer": Any<String>,
      "proof": Object {
        "created": Any<String>,
        "jws": Any<String>,
        "proofPurpose": "assertionMethod",
        "type": "EcdsaSecp256k1Signature2019",
        "verificationMethod": Any<String>,
      },
      "type": Array [
        "VerifiableCredential",
        "EntityIdentity",
      ],
    },
    Object {
      "@context": Array [
        "https://www.w3.org/2018/credentials/v1",
        Object {
          "@version": 1.1,
          "credential": Object {
            "@id": "scm:credential",
            "@type": "@json",
          },
          "data": Object {
            "@context": Object {
              "@version": 1.1,
              "scmdata": "https://example.org/credential/claim/data#",
            },
            "@id": "scmdata:id",
            "@type": "scmdata:type",
          },
          "did": Object {
            "@id": "scm:did",
            "@type": "@json",
          },
          "scm": "https://example.org/credential/claim#",
        },
      ],
      "credentialSubject": Object {
        "data": Object {
          "@type": "Offer:TestDocument",
          "credential": Object {
            "@context": Array [
              "https://www.w3.org/2018/credentials/v1",
              Object {
                "@version": 1.1,
                "data": Object {
                  "@id": "scm:data",
                  "@type": "@json",
                },
                "scm": "https://example.org/testdocument#",
              },
            ],
            "credentialSubject": Object {
              "data": Object {
                "@type": "TestDocument",
                "comment": "nice doc for alice",
                "key": "testdoc1",
              },
            },
            "holder": Object {
              "id": Any<String>,
            },
            "id": Any<String>,
            "issuanceDate": Any<String>,
            "issuer": Any<String>,
            "proof": Object {
              "created": Any<String>,
              "jws": Any<String>,
              "proofPurpose": "assertionMethod",
              "type": "EcdsaSecp256k1Signature2019",
              "verificationMethod": Any<String>,
            },
            "type": Array [
              "VerifiableCredential",
              "TestDocument",
            ],
          },
        },
        "did": Object {
          "@context": Array [
            "https://w3id.org/did/v1",
            "https://w3id.org/security/v2",
          ],
          "assertionMethod": Array [
            Any<String>,
          ],
          "authentication": Array [
            Any<String>,
          ],
          "id": Any<String>,
          "proof": Object {
            "created": Any<String>,
            "jws": Any<String>,
            "proofPurpose": "verificationMethod",
            "type": "EcdsaSecp256k1Signature2019",
            "verificationMethod": Any<String>,
          },
          "publicKey": Array [
            Object {
              "id": Any<String>,
              "publicKeyBase58": Any<String>,
              "type": "EcdsaSecp256k1VerificationKey2019",
            },
            Object {
              "id": Any<String>,
              "publicKeyBase58": Any<String>,
              "type": "EcdsaSecp256k1VerificationKey2019",
            },
          ],
          "verificationMethod": Array [
            Object {
              "@context": Array [
                "https://w3id.org/did/v1",
                Object {
                  "@version": 1.1,
                  "did": "https://w3id.org/security/v2",
                  "nonce": Object {
                    "@id": "did:nonce",
                    "@type": "xsd:string",
                  },
                  "originalPurposes": Object {
                    "@id": "did:originalPurposes",
                    "@type": "@json",
                  },
                  "proof": Object {
                    "@id": "did:proof",
                  },
                  "publicKeyBase58": Object {
                    "@id": "did:publicKeyBase58",
                    "@type": "xsd:string",
                  },
                  "xsd": "https://www.w3.org/2009/XMLSchema/XMLSchema.xsd#",
                },
              ],
              "controller": Any<String>,
              "id": Any<String>,
              "nonce": Any<String>,
              "originalPurposes": Array [
                "verificationMethod",
                "assertionMethod",
                "authentication",
              ],
              "proof": Object {
                "created": Any<String>,
                "jws": Any<String>,
                "type": "EcdsaSecp256k1Signature2019",
                "verificationMethod": Any<String>,
              },
              "type": "EcdsaSecp256k1VerificationKey2019",
            },
            Object {
              "controller": Any<String>,
              "id": Any<String>,
              "nonce": Any<String>,
              "type": "EcdsaSecp256k1VerificationKey2019",
            },
          ],
        },
      },
      "holder": Object {
        "id": Any<String>,
      },
      "id": Any<String>,
      "issuanceDate": Any<String>,
      "issuer": Any<String>,
      "proof": Object {
        "created": Any<String>,
        "jws": Any<String>,
        "proofPurpose": "assertionMethod",
        "type": "EcdsaSecp256k1Signature2019",
        "verificationMethod": Any<String>,
      },
      "type": Array [
        "VerifiableCredential",
        "CredentialOffer",
      ],
    },
    Object {
      "@context": Array [
        "https://www.w3.org/2018/credentials/v1",
        Object {
          "@version": 1.1,
          "credential": Object {
            "@id": "scm:credential",
            "@type": "@json",
          },
          "data": Object {
            "@context": Object {
              "@version": 1.1,
              "scmdata": "https://example.org/credential/claim/data#",
            },
            "@id": "scmdata:id",
            "@type": "scmdata:type",
          },
          "did": Object {
            "@id": "scm:did",
            "@type": "@json",
          },
          "scm": "https://example.org/credential/claim#",
        },
      ],
      "credentialSubject": Object {
        "data": Object {
          "@type": "Offer:TestDocument",
          "credential": Object {
            "@context": Array [
              "https://www.w3.org/2018/credentials/v1",
              Object {
                "@version": 1.1,
                "data": Object {
                  "@id": "scm:data",
                  "@type": "@json",
                },
                "scm": "https://example.org/testdocument#",
              },
            ],
            "credentialSubject": Object {
              "data": Object {
                "@type": "TestDocument",
                "description": "not very nice doc for alice",
                "id": "testdoc2",
              },
            },
            "holder": Object {
              "id": Any<String>,
            },
            "id": Any<String>,
            "issuanceDate": Any<String>,
            "issuer": Any<String>,
            "proof": Object {
              "created": Any<String>,
              "jws": Any<String>,
              "proofPurpose": "assertionMethod",
              "type": "EcdsaSecp256k1Signature2019",
              "verificationMethod": Any<String>,
            },
            "type": Array [
              "VerifiableCredential",
              "TestDocument",
            ],
          },
        },
        "did": Object {
          "@context": Array [
            "https://w3id.org/did/v1",
            "https://w3id.org/security/v2",
          ],
          "assertionMethod": Array [
            Any<String>,
          ],
          "authentication": Array [
            Any<String>,
          ],
          "id": Any<String>,
          "proof": Object {
            "created": Any<String>,
            "jws": Any<String>,
            "proofPurpose": "verificationMethod",
            "type": "EcdsaSecp256k1Signature2019",
            "verificationMethod": Any<String>,
          },
          "publicKey": Array [
            Object {
              "id": Any<String>,
              "publicKeyBase58": Any<String>,
              "type": "EcdsaSecp256k1VerificationKey2019",
            },
            Object {
              "id": Any<String>,
              "publicKeyBase58": Any<String>,
              "type": "EcdsaSecp256k1VerificationKey2019",
            },
          ],
          "verificationMethod": Array [
            Object {
              "@context": Array [
                "https://w3id.org/did/v1",
                Object {
                  "@version": 1.1,
                  "did": "https://w3id.org/security/v2",
                  "nonce": Object {
                    "@id": "did:nonce",
                    "@type": "xsd:string",
                  },
                  "originalPurposes": Object {
                    "@id": "did:originalPurposes",
                    "@type": "@json",
                  },
                  "proof": Object {
                    "@id": "did:proof",
                  },
                  "publicKeyBase58": Object {
                    "@id": "did:publicKeyBase58",
                    "@type": "xsd:string",
                  },
                  "xsd": "https://www.w3.org/2009/XMLSchema/XMLSchema.xsd#",
                },
              ],
              "controller": Any<String>,
              "id": Any<String>,
              "nonce": Any<String>,
              "originalPurposes": Array [
                "verificationMethod",
                "assertionMethod",
                "authentication",
              ],
              "proof": Object {
                "created": Any<String>,
                "jws": Any<String>,
                "type": "EcdsaSecp256k1Signature2019",
                "verificationMethod": Any<String>,
              },
              "type": "EcdsaSecp256k1VerificationKey2019",
            },
            Object {
              "controller": Any<String>,
              "id": Any<String>,
              "nonce": Any<String>,
              "type": "EcdsaSecp256k1VerificationKey2019",
            },
          ],
        },
      },
      "holder": Object {
        "id": Any<String>,
      },
      "id": Any<String>,
      "issuanceDate": Any<String>,
      "issuer": Any<String>,
      "proof": Object {
        "created": Any<String>,
        "jws": Any<String>,
        "proofPurpose": "assertionMethod",
        "type": "EcdsaSecp256k1Signature2019",
        "verificationMethod": Any<String>,
      },
      "type": Array [
        "VerifiableCredential",
        "CredentialOffer",
      ],
    },
  ],
}
`;

exports[`Credential helpers requests credentials 1`] = `
Object {
  "@context": Array [
    "https://www.w3.org/2018/credentials/v1",
  ],
  "holder": Object {
    "id": Any<String>,
  },
  "id": Any<String>,
  "proof": Object {
    "challenge": Any<String>,
    "created": Any<String>,
    "domain": Any<String>,
    "jws": Any<String>,
    "proofPurpose": "authentication",
    "type": "EcdsaSecp256k1Signature2019",
    "verificationMethod": Any<String>,
  },
  "type": Array [
    "VerifiablePresentation",
    "CredentialResponse",
  ],
  "verifiableCredential": Array [
    Object {
      "@context": Array [
        "https://www.w3.org/2018/credentials/v1",
        Object {
          "@version": 1.1,
          "data": Object {
            "@context": Object {
              "@version": 1.1,
              "scmdata": "https://example.org/entity/idnetity/data#",
            },
            "@id": "scmdata:id",
            "@type": "scmdata:type",
          },
          "did": Object {
            "@id": "scm:did",
            "@type": "@json",
          },
          "identity": Object {
            "@id": "scm:identity",
            "@type": "@json",
          },
          "scm": "https://example.org/entity/idnetity#",
        },
      ],
      "credentialSubject": Object {
        "data": Object {
          "@type": "EntityIdentity",
          "identity": Object {
            "@context": Array [
              "https://www.w3.org/2018/credentials/v1",
              Object {
                "@version": 1.1,
                "data": Object {
                  "@context": Object {
                    "@version": 1.1,
                    "scmdata": "https://example.org/identity/data#",
                  },
                  "@id": "scmdata:id",
                  "@type": "scmdata:type",
                },
                "firstname": Object {
                  "@id": "scm:firstname",
                  "@type": "xsd:string",
                },
                "lastname": Object {
                  "@id": "scm:lastname",
                  "@type": "xsd:string",
                },
                "scm": "https://example.org/identity#",
                "xsd": "http://www.w3.org/2001/XMLSchema#",
              },
            ],
            "credentialSubject": Object {
              "data": Object {
                "@type": "TestUtilIdentity",
                "firstname": "alice",
                "lastname": "Lastname",
              },
            },
            "holder": Object {
              "id": Any<String>,
            },
            "id": Any<String>,
            "issuanceDate": Any<String>,
            "issuer": Any<String>,
            "proof": Object {
              "created": Any<String>,
              "jws": Any<String>,
              "proofPurpose": "assertionMethod",
              "type": "EcdsaSecp256k1Signature2019",
              "verificationMethod": Any<String>,
            },
            "type": Array [
              "VerifiableCredential",
              "TestUtilIdentity",
            ],
          },
        },
        "did": Object {
          "@context": Array [
            "https://w3id.org/did/v1",
            "https://w3id.org/security/v2",
          ],
          "assertionMethod": Array [
            Any<String>,
          ],
          "authentication": Array [
            Any<String>,
          ],
          "capabilityDelegation": Array [
            Any<String>,
          ],
          "capabilityInvocation": Array [
            Any<String>,
          ],
          "id": Any<String>,
          "keyAgreement": Array [
            Any<String>,
          ],
          "proof": Object {
            "created": Any<String>,
            "jws": Any<String>,
            "proofPurpose": "verificationMethod",
            "type": "EcdsaSecp256k1Signature2019",
            "verificationMethod": Any<String>,
          },
          "publicKey": Array [
            Object {
              "id": Any<String>,
              "publicKeyBase58": Any<String>,
              "type": "EcdsaSecp256k1VerificationKey2019",
            },
          ],
          "verificationMethod": Array [
            Object {
              "controller": Any<String>,
              "id": Any<String>,
              "nonce": Any<String>,
              "type": "EcdsaSecp256k1VerificationKey2019",
            },
          ],
        },
      },
      "holder": Object {
        "id": Any<String>,
      },
      "id": Any<String>,
      "issuanceDate": Any<String>,
      "issuer": Any<String>,
      "proof": Object {
        "created": Any<String>,
        "jws": Any<String>,
        "proofPurpose": "assertionMethod",
        "type": "EcdsaSecp256k1Signature2019",
        "verificationMethod": Any<String>,
      },
      "type": Array [
        "VerifiableCredential",
        "EntityIdentity",
      ],
    },
    Object {
      "@context": Array [
        "https://www.w3.org/2018/credentials/v1",
        Object {
          "@version": 1.1,
          "data": Object {
            "@id": "scm:data",
            "@type": "@json",
          },
          "scm": "https://example.org/testdocument#",
        },
      ],
      "credentialSubject": Object {
        "data": Object {
          "@type": "TestDocument",
          "comment": "nice doc for alice",
          "key": "testdoc1",
        },
      },
      "holder": Object {
        "id": Any<String>,
      },
      "id": Any<String>,
      "issuanceDate": Any<String>,
      "issuer": Any<String>,
      "proof": Object {
        "created": Any<String>,
        "jws": Any<String>,
        "proofPurpose": "assertionMethod",
        "type": "EcdsaSecp256k1Signature2019",
        "verificationMethod": Any<String>,
      },
      "type": Array [
        "VerifiableCredential",
        "TestDocument",
      ],
    },
    Object {
      "@context": Array [
        "https://www.w3.org/2018/credentials/v1",
        Object {
          "@version": 1.1,
          "data": Object {
            "@context": Object {
              "@version": 1.1,
              "scmdata": "https://example.org/credential/satellite/data#",
            },
            "@id": "scmdata:id",
            "@type": "scmdata:type",
          },
          "did": Object {
            "@id": "scm:did",
            "@type": "@json",
          },
          "scm": "https://example.org/credential/satellite#",
        },
      ],
      "credentialSubject": Object {
        "data": Object {
          "@type": "CredentialSatellit",
          "did": Object {
            "@context": Array [
              "https://w3id.org/did/v1",
              "https://w3id.org/security/v2",
            ],
            "assertionMethod": Array [
              Any<String>,
            ],
            "authentication": Array [
              Any<String>,
            ],
            "id": Any<String>,
            "proof": Object {
              "created": Any<String>,
              "jws": Any<String>,
              "proofPurpose": "verificationMethod",
              "type": "EcdsaSecp256k1Signature2019",
              "verificationMethod": Any<String>,
            },
            "publicKey": Array [
              Object {
                "id": Any<String>,
                "publicKeyBase58": Any<String>,
                "type": "EcdsaSecp256k1VerificationKey2019",
              },
              Object {
                "id": Any<String>,
                "publicKeyBase58": Any<String>,
                "type": "EcdsaSecp256k1VerificationKey2019",
              },
            ],
            "verificationMethod": Array [
              Object {
                "@context": Array [
                  "https://w3id.org/did/v1",
                  Object {
                    "@version": 1.1,
                    "did": "https://w3id.org/security/v2",
                    "nonce": Object {
                      "@id": "did:nonce",
                      "@type": "xsd:string",
                    },
                    "originalPurposes": Object {
                      "@id": "did:originalPurposes",
                      "@type": "@json",
                    },
                    "proof": Object {
                      "@id": "did:proof",
                    },
                    "publicKeyBase58": Object {
                      "@id": "did:publicKeyBase58",
                      "@type": "xsd:string",
                    },
                    "xsd": "https://www.w3.org/2009/XMLSchema/XMLSchema.xsd#",
                  },
                ],
                "controller": Any<String>,
                "id": Any<String>,
                "nonce": Any<String>,
                "originalPurposes": Array [
                  "verificationMethod",
                  "assertionMethod",
                  "authentication",
                ],
                "proof": Object {
                  "created": Any<String>,
                  "jws": Any<String>,
                  "type": "EcdsaSecp256k1Signature2019",
                  "verificationMethod": Any<String>,
                },
                "type": "EcdsaSecp256k1VerificationKey2019",
              },
              Object {
                "controller": Any<String>,
                "id": Any<String>,
                "nonce": Any<String>,
                "type": "EcdsaSecp256k1VerificationKey2019",
              },
            ],
          },
        },
      },
      "holder": Object {
        "id": Any<String>,
      },
      "id": Any<String>,
      "issuanceDate": Any<String>,
      "issuer": Any<String>,
      "proof": Object {
        "created": Any<String>,
        "jws": Any<String>,
        "proofPurpose": "assertionMethod",
        "type": "EcdsaSecp256k1Signature2019",
        "verificationMethod": Any<String>,
      },
      "type": Array [
        "VerifiableCredential",
        "CredentialSatellit",
      ],
    },
    Object {
      "@context": Array [
        "https://www.w3.org/2018/credentials/v1",
        Object {
          "@version": 1.1,
          "data": Object {
            "@id": "scm:data",
            "@type": "@json",
          },
          "scm": "https://example.org/testdocument#",
        },
      ],
      "credentialSubject": Object {
        "data": Object {
          "@type": "TestDocument",
          "description": "not very nice doc for alice",
          "id": "testdoc2",
        },
      },
      "holder": Object {
        "id": Any<String>,
      },
      "id": Any<String>,
      "issuanceDate": Any<String>,
      "issuer": Any<String>,
      "proof": Object {
        "created": Any<String>,
        "jws": Any<String>,
        "proofPurpose": "assertionMethod",
        "type": "EcdsaSecp256k1Signature2019",
        "verificationMethod": Any<String>,
      },
      "type": Array [
        "VerifiableCredential",
        "TestDocument",
      ],
    },
    Object {
      "@context": Array [
        "https://www.w3.org/2018/credentials/v1",
        Object {
          "@version": 1.1,
          "data": Object {
            "@context": Object {
              "@version": 1.1,
              "scmdata": "https://example.org/credential/satellite/data#",
            },
            "@id": "scmdata:id",
            "@type": "scmdata:type",
          },
          "did": Object {
            "@id": "scm:did",
            "@type": "@json",
          },
          "scm": "https://example.org/credential/satellite#",
        },
      ],
      "credentialSubject": Object {
        "data": Object {
          "@type": "CredentialSatellit",
          "did": Object {
            "@context": Array [
              "https://w3id.org/did/v1",
              "https://w3id.org/security/v2",
            ],
            "assertionMethod": Array [
              Any<String>,
            ],
            "authentication": Array [
              Any<String>,
            ],
            "id": Any<String>,
            "proof": Object {
              "created": Any<String>,
              "jws": Any<String>,
              "proofPurpose": "verificationMethod",
              "type": "EcdsaSecp256k1Signature2019",
              "verificationMethod": Any<String>,
            },
            "publicKey": Array [
              Object {
                "id": Any<String>,
                "publicKeyBase58": Any<String>,
                "type": "EcdsaSecp256k1VerificationKey2019",
              },
              Object {
                "id": Any<String>,
                "publicKeyBase58": Any<String>,
                "type": "EcdsaSecp256k1VerificationKey2019",
              },
            ],
            "verificationMethod": Array [
              Object {
                "@context": Array [
                  "https://w3id.org/did/v1",
                  Object {
                    "@version": 1.1,
                    "did": "https://w3id.org/security/v2",
                    "nonce": Object {
                      "@id": "did:nonce",
                      "@type": "xsd:string",
                    },
                    "originalPurposes": Object {
                      "@id": "did:originalPurposes",
                      "@type": "@json",
                    },
                    "proof": Object {
                      "@id": "did:proof",
                    },
                    "publicKeyBase58": Object {
                      "@id": "did:publicKeyBase58",
                      "@type": "xsd:string",
                    },
                    "xsd": "https://www.w3.org/2009/XMLSchema/XMLSchema.xsd#",
                  },
                ],
                "controller": Any<String>,
                "id": Any<String>,
                "nonce": Any<String>,
                "originalPurposes": Array [
                  "verificationMethod",
                  "assertionMethod",
                  "authentication",
                ],
                "proof": Object {
                  "created": Any<String>,
                  "jws": Any<String>,
                  "type": "EcdsaSecp256k1Signature2019",
                  "verificationMethod": Any<String>,
                },
                "type": "EcdsaSecp256k1VerificationKey2019",
              },
              Object {
                "controller": Any<String>,
                "id": Any<String>,
                "nonce": Any<String>,
                "type": "EcdsaSecp256k1VerificationKey2019",
              },
            ],
          },
        },
      },
      "holder": Object {
        "id": Any<String>,
      },
      "id": Any<String>,
      "issuanceDate": Any<String>,
      "issuer": Any<String>,
      "proof": Object {
        "created": Any<String>,
        "jws": Any<String>,
        "proofPurpose": "assertionMethod",
        "type": "EcdsaSecp256k1Signature2019",
        "verificationMethod": Any<String>,
      },
      "type": Array [
        "VerifiableCredential",
        "CredentialSatellit",
      ],
    },
  ],
}
`;
